--- a/standalone/templates/jboss-cli.xml
+++ b/standalone/templates/jboss-cli.xml
@@ -3,32 +3,28 @@
 <!--
    WildFly Command-line Interface configuration.
 -->
-<jboss-cli xmlns="urn:jboss:cli:2.0">
+<jboss-cli xmlns="urn:jboss:cli:3.1">
 
-    <default-protocol use-legacy-override="true">https-remoting</default-protocol>
+    <default-protocol use-legacy-override="true">remote+https</default-protocol>
 
     <!-- The default controller to connect to when 'connect' command is executed w/o arguments -->
     <default-controller>
-        <protocol>http-remoting</protocol>
+        <protocol>remote+http</protocol>
         <host>localhost</host>
         <port>9990</port>
     </default-controller>
-    
-    <!-- Example controller alias named 'Test'  
+
+    <!-- Example controller alias named 'Test'
     <controllers>
         <controller name="Test">
-            <protocol>http-remoting</protocol>
+            <protocol>remote+http</protocol>
             <host>localhost</host>
             <port>9990</port>
         </controller>
     </controllers>
-    -->    
+    -->
 
     <validate-operation-requests>true</validate-operation-requests>
-
-    <!-- whether to resolve system properties specified as command argument or operation parameter values
-         in the CLI VM before sending the operation requests to the controller -->
-    <resolve-parameter-values>false</resolve-parameter-values>
 
     <!-- Command and operation history log configuration -->
     <history>
@@ -38,9 +34,21 @@
         <max-size>500</max-size>
     </history>
 
+    <!-- whether to resolve system properties specified as command argument or operation parameter values
+                  in the CLI VM before sending the operation requests to the controller -->
+    <resolve-parameter-values>false</resolve-parameter-values>
+
+
     <!-- Whether to write info and error messages to the terminal output -->
     <silent>false</silent>
 
     <!-- Whether to filter out commands and attributes based on user's permissions -->
     <access-control>false</access-control>
+
+    <!-- Include the prompt with the command into the output for each command executed in non-interactive mode -->
+    <echo-command>false</echo-command>
+
+    <!-- Uncomment to set the command timeout. Element value is in seconds -->
+    <!-- <command-timeout>30</command-timeout> -->
+
 </jboss-cli>
